--- a/Backend/questions-overview.mdx
+++ b/Backend/questions-overview.mdx
@@ -1,140 +1,260 @@
-# Here are important backend interview topics that you should prepare for
-## Programming Languages & Frameworks
+# **Backend Developer Interview Topics – Detailed Roadmap**
 
-Core concepts of your primary backend language (Java, Python, Node.js, etc.)
+---
 
-Framework-specific knowledge (Spring Boot, Django, Express.js, etc.)
+## **1. Programming Languages & Frameworks**
 
-Object-Oriented Programming principles
+* **Core Concepts of Primary Backend Language** (Java, Python, Node.js, Go, etc.)
 
-Functional Programming concepts
+  * Syntax, control flow, data types
+  * Exception handling
+  * File I/O
+  * Networking basics (sockets, HTTP requests)
+* **Framework-Specific Knowledge**
 
-## Database Knowledge
+  * **Java** → Spring Boot: beans, dependency injection, configuration, REST controllers
+  * **Python** → Django/Flask: ORM, routing, middleware
+  * **Node.js** → Express.js/NestJS: middleware, routing, async handling
+* **Object-Oriented Programming (OOP)**
 
-SQL vs NoSQL databases
+  * Encapsulation, Inheritance, Polymorphism, Abstraction
+  * Interfaces, abstract classes
+  * Composition vs inheritance
+* **Functional Programming**
 
-Database design and normalization
+  * Pure functions, immutability
+  * Higher-order functions, closures
+  * Map, filter, reduce
 
-Indexing and query optimization
+---
 
-Transaction management (ACID properties)
+## **2. Database Knowledge**
 
-Database sharding and partitioning
+* **SQL vs NoSQL**
 
-## System Design
+  * Relational DBs (PostgreSQL, MySQL) vs document/key-value DBs (MongoDB, Redis)
+  * When to choose each type
+* **Database Design & Normalization**
 
-Microservices architecture
+  * 1NF, 2NF, 3NF
+  * Denormalization trade-offs
+* **Indexing & Query Optimization**
 
-Monolithic vs distributed systems
+  * Clustered vs non-clustered indexes
+  * Query execution plans
+* **Transaction Management**
 
-Load balancing
+  * ACID properties
+  * Isolation levels (READ COMMITTED, SERIALIZABLE)
+* **Sharding & Partitioning**
 
-Caching strategies
+  * Horizontal vs vertical partitioning
+  * Data replication strategies
 
-Message queues and event-driven architecture
+---
 
-## API Design
+## **3. System Design**
 
-RESTful API principles
+* **Architecture Styles**
 
-API security
+  * Monolithic vs microservices vs serverless
+* **Load Balancing**
 
-Authentication and Authorization
+  * Round-robin, least connections, IP hash
+  * L4 vs L7 load balancing
+* **Caching Strategies**
 
-API versioning
+  * Client-side, server-side, CDN
+  * Cache invalidation policies (LRU, LFU, TTL)
+* **Message Queues & Event-Driven Architecture**
 
-GraphQL basics
+  * RabbitMQ, Kafka, AWS SQS
+  * Publish-subscribe patterns
 
-## Security
+---
 
-OAuth 2.0 and JWT
+## **4. API Design**
 
-HTTPS/SSL
+* **RESTful Principles**
 
-Common security vulnerabilities (XSS, CSRF, SQL Injection)
+  * Resource naming, HTTP methods, status codes
+* **Security**
 
-Password hashing and encryption
+  * Authentication vs authorization
+  * Role-based access control (RBAC)
+* **Versioning**
 
-Input validation
+  * URI versioning vs header-based versioning
+* **GraphQL**
 
-## Performance & Scalability
+  * Queries, mutations, resolvers
 
-Horizontal vs Vertical scaling
+---
 
-Performance optimization techniques
+## **5. Security**
 
-Memory management
+* **OAuth 2.0 & JWT**
 
-Connection pooling
+  * Access vs refresh tokens
+  * Token storage best practices
+* **HTTPS/SSL**
 
-Rate limiting
+  * TLS handshake basics
+* **Common Vulnerabilities**
 
-## DevOps & Tools
+  * XSS, CSRF, SQL Injection
+  * Prevention techniques
+* **Password Security**
 
-Version control (Git)
+  * Hashing (bcrypt, Argon2)
+  * Salting
+* **Input Validation**
 
-CI/CD pipelines
+  * Server-side validation
+  * Sanitization
 
-Docker and containerization
+---
 
-Kubernetes basics
+## **6. Performance & Scalability**
 
-Monitoring and logging
+* **Scaling**
 
-## Data Structures & Algorithms
+  * Horizontal vs vertical scaling
+  * Stateless service design
+* **Performance Optimization**
 
-Basic data structures
+  * Profiling and bottleneck detection
+  * Query optimization, code refactoring
+* **Memory Management**
 
-Time and space complexity
+  * Garbage collection tuning
+* **Connection Pooling**
 
-Common algorithms
+  * Database connection optimization
+* **Rate Limiting**
 
-Problem-solving approaches
+  * Token bucket, leaky bucket algorithms
 
-## Testing
+---
 
-Unit testing
+## **7. DevOps & Tools**
 
-Integration testing
+* **Version Control**
 
-Test-driven development (TDD)
+  * Git workflows (Git Flow, trunk-based)
+* **CI/CD**
 
-Mocking and stubbing
+  * GitHub Actions, Jenkins, GitLab CI
+* **Containerization**
 
-Test coverage
+  * Dockerfile basics, multi-stage builds
+* **Kubernetes**
 
-## System Architecture
+  * Pods, services, deployments
+* **Monitoring & Logging**
 
-Design patterns
+  * ELK stack, Prometheus, Grafana
 
-SOLID principles
+---
 
-Clean code practices
+## **8. Data Structures & Algorithms**
 
-Error handling
+* **Basic Structures**
 
-Logging and monitoring
+  * Arrays, linked lists, stacks, queues, hash maps, trees, graphs
+* **Complexity**
 
-## Concurrency & Threading
+  * Big O notation (time & space)
+* **Common Algorithms**
 
-Multi-threading concepts
+  * Sorting, searching, BFS/DFS, recursion, dynamic programming
+* **Problem-Solving**
 
-Race conditions
+  * Breaking problems into subproblems
+  * Optimizing step-by-step
 
-Deadlocks
+---
 
-Asynchronous programming
+## **9. Testing**
 
-Thread pools
+* **Unit Testing**
 
-## Cloud Services
+  * JUnit, pytest, Mocha/Chai
+* **Integration Testing**
 
-Basic cloud concepts
+  * Testing APIs with Postman/Newman
+* **Test-Driven Development (TDD)**
+* **Mocking & Stubbing**
 
-AWS/Azure/GCP services
+  * Mockito, unittest.mock
+* **Test Coverage**
 
-Serverless architecture
+  * Measuring and improving coverage
 
-Cloud deployment models
+---
 
-Infrastructure as Code
+## **10. System Architecture**
+
+* **Design Patterns**
+
+  * Singleton, Factory, Observer, Strategy
+* **SOLID Principles**
+
+  * Single Responsibility, Open/Closed, etc.
+* **Clean Code**
+
+  * Naming conventions, modular code
+* **Error Handling**
+
+  * Centralized exception handling
+* **Logging**
+
+  * Structured logging, log levels
+
+---
+
+## **11. Concurrency & Threading**
+
+* **Multi-threading**
+
+  * Thread lifecycle
+* **Race Conditions & Deadlocks**
+
+  * Prevention techniques
+* **Asynchronous Programming**
+
+  * Futures, promises, async/await
+* **Thread Pools**
+
+  * Fixed vs cached pools
+
+---
+
+## **12. Cloud Services**
+
+* **Cloud Basics**
+
+  * IaaS, PaaS, SaaS
+* **Major Providers**
+
+  * AWS, Azure, GCP
+* **Serverless**
+
+  * AWS Lambda, Azure Functions
+* **Cloud Deployment Models**
+
+  * Public, private, hybrid
+* **Infrastructure as Code**
+
+  * Terraform, AWS CDK
+
+---
+
+If you want, I can **turn this into an interview prep table** with:
+
+* **Topic**
+* **Key Points**
+* **Difficulty Level**
+* **Links to study resources**
+
+That way, you can track progress and cover every area without missing gaps before interviews. Would you like me to do that next?
